LLM models can be selected from the chat UI